--- a/WebContent/T_cart.html
+++ b/WebContent/T_cart.html
@@ -383,6 +383,8 @@
                     <h5>$720.00</h5>
                   </td>
                 </tr>
+                
+                <!-- 장바구니 아래쪽. -->
                 <tr class="bottom_button">
                   <td>
                     <a class="gray_btn" href="#">Update Cart</a>
